# Cpp_Copy_Epsilon_Constructor

./: CMakeLists.txt  Location_Aufgabe  README.md  location.cpp  location.h  main.cpp  person.cpp  person.h  restaurant.cpp  restaurant.h
